# pydantic_jsonld

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pydantic-context.md  pyproject.toml
examples/: README.md  examples.py  named_graphs_example.py  pyld_local_validation.py  pyld_validation_example.py  signed_models_example.py
src/pydantic_jsonld/: __init__.py  cli.py  crypto_utils.py  exporters.py  models.py  signatures.py  validation.py
tests/: __init__.py  test_exporters.py  test_graphs.py  test_models.py  test_signatures.py  test_validation.py
